@startuml Cancel Print Job Use Case - Class Diagram

!theme plain
top to bottom direction
skinparam classAttributeIconSize 0
skinparam linetype ortho

skinparam class {
  BackgroundColor LightBlue
  BorderColor Blue
}

' Level 0: Independent classes
class Student {
  - student_id
  - student_code
  - status
  + getBalance()
}

class PrinterPhysical {
  - printer_id
  - serial_number
  - is_enabled
  - status
  - printing_status
}

' Level 1: Depends on Level 0
class PrintJob {
  - job_id
  - print_status
  - page_orientation
  - print_side
  - number_of_copy
  - total_pages
  - total_price
  - start_time
  - end_time
}

' Level 2: Depends on Level 1
class PrintJobPage {
  - page_record_id
  - page_number
  - is_printed
  - printed_at
}

class Payment {
  - payment_id
  - payment_method
  - payment_status
  - amount_paid_from_balance
  - amount_paid_directly
  - total_amount
}

class RefundPrintJob {
  - refund_id
  - pages_not_printed
  - created_at
}

' Relationships
' Composition: PrintJob contains PrintJobPage
PrintJob "1" *-- "*" PrintJobPage : contains

' Associations
Student "1" --> "*" PrintJob : owns
PrinterPhysical "1" --> "*" PrintJob : prints on
PrintJob "1" --> "1" Payment : has
PrintJob "1" --> "0..1" RefundPrintJob : generates

@enduml

